<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:requiresFadingEdge="vertical"
    android:fadingEdge="vertical"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <revolver.ideal.ui.view.InterTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="4dp"
            android:text="@string/fragment_user_own_profile_personal_data_header_name"
            android:textColor="@color/neutral_800"
            android:textSize="16sp"
            app:specimenStyle="semiBold"/>

        <revolver.ideal.ui.view.InterEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:padding="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/fragment_user_own_profile_personal_data_first_name"
            android:hint="@string/fragment_user_own_profile_personal_data_first_name"
            android:inputType="textCapWords"
            android:background="@drawable/bg_user_own_profile_personal_data_field"
            android:textCursorDrawable="@drawable/cursor_user_own_profile_personal_data_field"
            android:autofillHints="@null"
            app:specimenStyle="medium"/>

        <revolver.ideal.ui.view.InterEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/fragment_user_own_profile_personal_data_last_name"
            android:hint="@string/fragment_user_own_profile_personal_data_last_name"
            android:inputType="textCapWords"
            android:background="@drawable/bg_user_own_profile_personal_data_field"
            android:textCursorDrawable="@drawable/cursor_user_own_profile_personal_data_field"
            android:autofillHints="@null"
            app:specimenStyle="medium"/>

        <revolver.ideal.ui.view.InterTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="4dp"
            android:text="@string/fragment_user_own_profile_personal_data_header_phone"
            android:textColor="@color/neutral_800"
            android:textSize="16sp"
            app:specimenStyle="semiBold"/>

        <revolver.ideal.ui.view.InterEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:padding="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/fragment_user_own_profile_personal_data_phone"
            android:hint="@string/fragment_user_own_profile_personal_data_phone"
            android:inputType="phone"
            android:background="@drawable/bg_user_own_profile_personal_data_field"
            android:textCursorDrawable="@drawable/cursor_user_own_profile_personal_data_field"
            android:autofillHints="@null"
            app:specimenStyle="medium"/>

        <revolver.ideal.ui.view.InterTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="4dp"
            android:text="@string/fragment_user_own_profile_personal_data_header_email"
            android:textColor="@color/neutral_800"
            android:textSize="16sp"
            app:specimenStyle="semiBold"/>

        <revolver.ideal.ui.view.InterEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:padding="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/fragment_user_own_profile_personal_data_email"
            android:hint="@string/fragment_user_own_profile_personal_data_email"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_user_own_profile_personal_data_field"
            android:textCursorDrawable="@drawable/cursor_user_own_profile_personal_data_field"
            android:autofillHints="@null"
            app:specimenStyle="medium"/>

        <revolver.ideal.ui.view.InterTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_address"
            android:drawablePadding="4dp"
            android:text="@string/fragment_user_own_profile_personal_data_header_address"
            android:textColor="@color/neutral_800"
            android:textSize="16sp"
            app:specimenStyle="semiBold"/>

        <revolver.ideal.ui.view.InterEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:padding="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/fragment_user_own_profile_personal_data_address"
            android:hint="@string/fragment_user_own_profile_personal_data_address"
            android:inputType="textPostalAddress"
            android:background="@drawable/bg_user_own_profile_personal_data_field"
            android:textCursorDrawable="@drawable/cursor_user_own_profile_personal_data_field"
            android:autofillHints="@null"
            app:specimenStyle="medium"/>

        <revolver.ideal.ui.view.InterTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_website"
            android:drawablePadding="4dp"
            android:text="@string/fragment_user_own_profile_personal_data_header_website"
            android:textColor="@color/neutral_800"
            android:textSize="16sp"
            app:specimenStyle="semiBold"/>

        <revolver.ideal.ui.view.InterEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:padding="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/fragment_user_own_profile_personal_data_website"
            android:hint="@string/fragment_user_own_profile_personal_data_website"
            android:inputType="textUri"
            android:background="@drawable/bg_user_own_profile_personal_data_field"
            android:textCursorDrawable="@drawable/cursor_user_own_profile_personal_data_field"
            android:autofillHints="@null"
            app:specimenStyle="medium"/>

    </LinearLayout>

</ScrollView>